# node-based-image-processor

./: .gitignore  Blend.cpp  Blend.h  BlurNode.cpp  BlurNode.h  BrightnessNode.cpp  BrightnessNode.h  CMakeLists.txt  CMakeLists.txt.autosave  Filter.cpp  Filter.h  ImageLoaderModel.cpp  ImageLoaderModel.h  ImageShowModel.cpp  ImageShowModel.h  InputNode.cpp  InputNode.h  Noise.cpp  Noise.h  Splitter.cpp  Splitter.h  Threshold.cpp  Threshold.h  edge.cpp  edge.h  main.cpp  mainwindow.cpp  mainwindow.h  readme.md  readme.md.autosave
include/: ImageLoaderModel.h
